--- a/SDL_ttf-2.0.11/VisualC/glfont/glfont.vcxproj
+++ b/SDL_ttf-2.0.11/VisualC/glfont/glfont.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{3BEF6A23-3BB6-4400-9421-D055B36466DC}</ProjectGuid>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
