--- a/SDL_gfx/Test/TestGfxBlit.vcxproj
+++ b/SDL_gfx/Test/TestGfxBlit.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{AE22EFD3-6F6D-48C0-AF3D-EF112306BEDC}</ProjectGuid>
     <RootNamespace>TestGfxBlit</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
