--- a/SDL_gfx/Test/TestGfxTexture.vcxproj
+++ b/SDL_gfx/Test/TestGfxTexture.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{AE22EFD3-6F6D-32C0-AA3D-EF190406BEDC}</ProjectGuid>
     <RootNamespace>TestGfxTexture</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
