--- a/SDL_gfx/Test/TestRotozoom.vcxproj
+++ b/SDL_gfx/Test/TestRotozoom.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{AE98EFD3-6F6D-48C0-AF3D-EF560406BEDC}</ProjectGuid>
     <RootNamespace>TestRotozoom</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
